# Expense-Tracker

./: .zshrc  README.md  pyproject.toml
src/expense_tracker/: main.py
